# agendaReflex

./: .gitignore  DESIGN_SYSTEM_USAGE.md  README.md  README2.md  alembic.ini  pyproject.toml  requirements.txt  rxconfig.py
agendaReflex/: agendaReflex.py
agendaReflex/backend/: config.py
agendaReflex/backend/db/: db_handler.py
agendaReflex/backend/services/: event_service.py  user_service.py
agendaReflex/backend/utils/: cors.py  hashing.py
agendaReflex/components/: header.py  user_card.py  user_list.py
agendaReflex/models/user/: model.py
agendaReflex/pages/: main_page.py
agendaReflex/state/: user_state.py
alembic/: env.py
app/: config.py  main.py
app/api/dependencies/: auth_cookies.py  auth_guard.py
app/api/routes/: auth.py  events.py  events_admin.py  users_admin.py
app/api/services/: event_service.py  user_service.py
app/backend/: config.py  main.py
app/components/auth/: alert.py  auth_message.py  form_field.py  login_form.py  register_form.py
app/components/clients/: __init__.py  clients_view.py
app/components/dashboard/: __init__.py  dashboard_simple.py  dashboard_updated.py
app/components/forms/: form_container.py  form_field.py  form_header.py  inputField.py  login_form.py  primaryBtn.py  register_form.py
app/components/hero/: hero_section.py
app/components/layout/: containers.py  spa_layout.py
app/frontend/: main.py
app/pages/: login_page.py  main_page.py
app/services/: user_service.py
app/state/: app_state.py  auth_state.py  page_state.py  user_state.py
app/utils/: __init__.py
backup/: env2Prueba.py
src/backend/: main.py
src/frontend/: main.py
(+122 files in other folders)
